--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         
         <div class="originalContent">
           ここに足す
-
+          <img alt="神楽坂 茶寮 本店" src="https://tblg.k-img.com/restaurant/images/Rvw/194902/200x200_square_043d100ae1d90f732ed38d92c8a76555.jpg">
         </div>
 
         <div class="list-controll">
